# C-OpenGL

./: CMakeLists.txt
include/glad/: glad.h
src/: main.c  obj.c  obj.h  ortho.c  ortho.h  shader.c  shader.h  view.c  view.h
